# vector-distance

./: .gitignore  CMakeLists.txt  build.sh
include/: common.h  lib.h
src/: avx.c  avx_transpose_trick.c  avx_trick.c  common.c  scalar.c  scalar_transpose_trick.c  scalar_trick.c  self_gemm.c  sgemm.c  sse.c  sse_trick.c  vector_distance.c
